# prime_basis_research

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  brainstroming-vizualazation-ideas.md  build.rs  prime_decompositions.json
.kiro/specs/phases-2-6-visualizations/: design.md  requirements.md  tasks.md
src/: analysis.rs  lib.rs  main.rs  spectral.rs  viz_common.rs
