[package]
name = "prime_basis_research"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
eframe = "0.31"
egui_plot = "0.31"
rustfft = "6"
nalgebra = "0.33"
rand = "0.8"

[dev-dependencies]
proptest = "1"
